--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
 <a class="nav-link flex items-center gap-3 px-3 py-2 rounded-lg text-silver transition-all duration-200" href="#">
 <span class="material-symbols-outlined">handshake</span>
 <span class="text-sm font-medium">Matches</span>
-<a href="matches.html"> rel ="matches" </a>
+<a href="matches.html">Matches</a>
 </a>
 <a class="nav-link flex items-center gap-3 px-3 py-2 rounded-lg text-silver transition-all duration-200" href="#">
 <span class="material-symbols-outlined">chat_bubble</span>
@@ -302,5 +302,6 @@
 </div>
 </main>
 </div>
+
 
 </body></html>
