Revise index.html for SkillSwap landing page
Updated the HTML structure and content for the SkillSwap landing page, including modifications to the header, main sections, and footer.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="flex flex-wrap justify-center gap-4 mt-4">
 <button class="px-8 py-4 bg-primary text-white font-bold rounded-xl shadow-xl shadow-primary/30 hover:scale-105 transition-transform">
                             Start Swapping Now
-        <a href="homepage.html>homepage</a>
+        
                         </button>
 <button class="px-8 py-4 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 font-bold rounded-xl hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors">
                             Watch Video
@@ -234,11 +234,11 @@
 <p class="text-slate-300 text-lg md:text-xl max-w-2xl">
                         Join thousands of users already teaching and learning today. Your first match is waiting for you.
                     </p>
-<div class="flex flex-col sm:flex-row gap-4 w-full max-w-md">
-<button class="flex-1 px-8 py-4 bg-primary text-white font-bold rounded-xl hover:bg-primary/90 hover:scale-105 transition-all text-lg">
-                            Get Started for Free
-        <a href="homepage.html">homepage</a>
-                        </button>
+<a href="homepage.html"
+   class="flex flex-1 px-8 py-4 bg-primary text-white font-bold rounded-xl hover:bg-primary/90 hover:scale-105 transition-all text-lg text-center">
+    Get Started for Free
+</a>
+
 </div>
 <p class="text-slate-500 text-sm">No credit card required. Cancel anytime.</p>
 </div>
@@ -266,5 +266,6 @@
 </footer>
 
 </body></html>
+
 
 
