--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
                         Join a global community of learners and mentors. Share what you know, learn what you don't. It's time to build your future together.
                     </p>
 <div class="flex flex-wrap justify-center gap-4 mt-4">
+        <a href="homepage.html">
 <button class="px-8 py-4 bg-primary text-white font-bold rounded-xl shadow-xl shadow-primary/30 hover:scale-105 transition-transform">
                             Start Swapping Now
-        
+        </a>
                         </button>
 <button class="px-8 py-4 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 font-bold rounded-xl hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors">
                             Watch Video
@@ -266,6 +267,7 @@
 </footer>
 
 </body></html>
+
 
 
 
