Update print statement from 'Hello' to 'Goodbye'

--- a/trending.html
+++ b/trending.html
@@ -68,31 +68,31 @@
 <h1 class="text-xl font-bold tracking-tight text-white">SkillShare</h1>
 </div>
 <nav class="flex-1 px-4 space-y-2 mt-4">
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
                 Dashboard
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="chat.html">
 <span class="material-symbols-outlined">chat</span>
                 Chat
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="community.html">
 <span class="material-symbols-outlined">groups</span>
                 Community
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="calender.html">
 <span class="material-symbols-outlined">calendar_today</span>
                 Calendar
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl sidebar-active text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl sidebar-active text-sm font-medium" href="trending.html">
 <span class="material-symbols-outlined">trending_up</span>
                 Trending
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="matches.html">
 <span class="material-symbols-outlined">handshake</span>
                 Matches
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="#">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="meeting.html">
 <span class="material-symbols-outlined">videocam</span>
                 Meeting
             </a>
@@ -341,3 +341,4 @@
 </div>
 
 </body></html>
+
