--- a/chat.html
+++ b/chat.html
@@ -88,7 +88,7 @@
 <span class="material-symbols-outlined">trending_up</span>
                 Trending
             </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="matches.html">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="homepage.html">
 <span class="material-symbols-outlined">handshake</span>
                 Matches
             </a>
@@ -280,4 +280,5 @@
 </div>
 
 </body></html>
+
 
