Fix formatting issues in index.html
The HTML structure has been updated to correct formatting issues and ensure proper rendering. This includes adjustments to the header, main sections, and footer.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     Log In
 </a>
                 </button>
-        <a href="homepahe.html">
+        <a href="homepage.html">
 <button class="px-5 py-2 bg-primary text-white text-sm font-bold rounded-lg shadow-lg shadow-primary/20 hover:bg-primary/90 transition-all">
                     Get Started
         </a>
@@ -271,6 +271,7 @@
 </footer>
 
 </body></html>
+
 
 
 
