--- a/homepage.html
+++ b/homepage.html
@@ -141,7 +141,9 @@
 <p class="text-sm font-semibold"> Rohan Sharma </p>
 <p class="text-xs text-text-muted leading-none">Pro Learner</p>
 </div>
+        <a href="profile2.html"
 <div class="size-10 rounded-full bg-center bg-cover border-2 border-accent-light/30" data-alt="Portrait of a professional learner" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAqROXZ86Nfcd8H0sb5johQAH-6dXtxNKzkYUfdKx8yPr5GkhGFLPfAGjSqVxerqZhG9bfCc8_EkumBLwceiu15QS5J9u8zPnOJOtpKAt6FYpAI4t8GpMrlfUoArmKW-P7DtJK1jA19aI94pzP2ld7Xwr00l-KG2QARO6WYdFSkJk7JFCW-NMeeum35O0DR3g2hVJuPrH0xtokHOsycaNVwfHSVS2DXMfN_yIbpzKudIeFN9SeS7EC9XsvLFw3Jp3HLartLOff-20M')"></div>
+</a>
 </div>
 </div>
 </header>
@@ -205,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
