--- a/trending.html
+++ b/trending.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Trending Topics | SkillShare</title>
+<title>Trending Topics | SkillMates</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -65,7 +65,7 @@
 <path clip-rule="evenodd" d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 </div>
-<h1 class="text-xl font-bold tracking-tight text-white">SkillShare</h1>
+<h1 class="text-xl font-bold tracking-tight text-white">SkillMates</h1>
 </div>
 <nav class="flex-1 px-4 space-y-2 mt-4">
 <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="dashboard.html">
@@ -133,7 +133,7 @@
 </div>
 <div class="flex items-center gap-3 pl-4 border-l border-secondary/20">
 <div class="text-right hidden sm:block">
-<p class="text-sm font-semibold text-slate-900 dark:text-white">Alex Sterling</p>
+<p class="text-sm font-semibold text-slate-900 dark:text-white">Rohan Sharma</p>
 <p class="text-xs text-text-muted leading-none">Pro Learner</p>
 </div>
 <div class="size-10 rounded-full bg-center bg-cover border-2 border-accent-light/30" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAqROXZ86Nfcd8H0sb5johQAH-6dXtxNKzkYUfdKx8yPr5GkhGFLPfAGjSqVxerqZhG9bfCc8_EkumBLwceiu15QS5J9u8zPnOJOtpKAt6FYpAI4t8GpMrlfUoArmKW-P7DtJK1jA19aI94pzP2ld7Xwr00l-KG2QARO6WYdFSkJk7JFCW-NMeeum35O0DR3g2hVJuPrH0xtokHOsycaNVwfHSVS2DXMfN_yIbpzKudIeFN9SeS7EC9XsvLFw3Jp3HLartLOff-20M')"></div>
@@ -341,5 +341,6 @@
 </div>
 
 </body></html>
+
 
 
