--- a/profile2.html
+++ b/profile2.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Professional Skill Profile - SkillSwap</title>
+<title>Professional Skill Profile - SkillMates</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -94,12 +94,12 @@
 <span class="material-symbols-outlined text-[12px] text-navy-deep font-bold">check</span>
 </div>
 </div>
-<h1 class="text-2xl font-bold text-white mb-1">Alex Johnson</h1>
+<h1 class="text-2xl font-bold text-white mb-1">Rohan Sharma</h1>
 <p class="text-primary text-sm font-medium mb-4 uppercase tracking-widest">Master Contributor</p>
 <div class="space-y-3 mb-8">
 <div class="flex items-center gap-3 text-slate-400 text-sm">
 <span class="material-symbols-outlined text-lg">location_on</span>
-<span>San Francisco, CA</span>
+<span>Ahmedabad</span>
 </div>
 <div class="flex items-center gap-3 text-slate-400 text-sm">
 <span class="material-symbols-outlined text-lg">work</span>
@@ -292,5 +292,6 @@
 <p class="text-slate-500 text-sm font-medium tracking-wide italic">"Shared knowledge is accelerated evolution."</p>
 <p class="text-slate-600 text-xs mt-4">© 2024 SKILLSWAP ENTERPRISE SOLUTIONS</p>
 </footer>
+
 
 </body></html>
