--- a/profile2.html
+++ b/profile2.html
@@ -59,7 +59,7 @@
 <path clip-rule="evenodd" d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 </div>
-<h2 class="text-xl font-bold tracking-tight text-white">SKILLSWAP<span class="text-primary font-black">.</span>PRO</h2>
+<h2 class="text-xl font-bold tracking-tight text-white">SkillMates</h2>
 </div>
 <div class="hidden md:flex items-center bg-navy-deep border border-slate-border rounded-lg px-4 py-2 w-80">
 <span class="material-symbols-outlined text-slate-500 text-xl">search</span>
@@ -295,3 +295,4 @@
 
 
 </body></html>
+
