--- a/homepage.html
+++ b/homepage.html
@@ -70,7 +70,7 @@
 <path clip-rule="evenodd" d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 </div>
-<h1 class="text-xl font-bold tracking-tight text-white">SkillMates</h1>
+<h1 class="text-xl font-bold tracking-tight text-white">SkillMate</h1>
 </div>
 <nav class="flex-1 px-4 space-y-2 mt-4">
 <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-text-muted hover:bg-secondary/20 transition-colors text-sm font-medium" href="dashboard.html">
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
