--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="size-10 bg-primary rounded-lg flex items-center justify-center text-white">
 <span class="material-symbols-outlined text-2xl">swap_calls</span>
 </div>
-<h2 class="text-xl font-bold tracking-tight">SkillMates</h2>
+<h2 class="text-xl font-bold tracking-tight">SkillMate</h2>
 </div>
 <nav class="hidden md:flex items-center gap-8">
 <a class="text-sm font-medium hover:text-primary transition-colors" href="#">How it works</a>
@@ -271,6 +271,7 @@
 </footer>
 
 </body></html>
+
 
 
 
