--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <div class="flex items-center gap-3 border-b border-slate-100 dark:border-slate-700 pb-4">
 <div class="size-10 rounded-full bg-slate-200" data-alt="User profile avatar for skill swapping" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDyFG8e4wIPBz9vfdf_crmONQweascPdfTUljatsZ0TS6nlwQMjvDFSUwqPSW6rTkV5FcnPW07uH731qpPKJQM7F81F8TD6fyHyqQBtfrqs7GXOx6Z3cwAv0BJEC6B3GLYBo0nwyWHWY9Ck70D91zJcACEC9ENwJyGI25Zc5sAWldlFn9l6duHB3joRz-N9NVvLwQMeOKSGQ9aS4Y4g3Dw1Wfy_gbK1lHiUZPlkNzO6AWzgQtOzbI7JVgq16C6oH9tVQ6ipAVqquiHC'); background-size: cover;"></div>
 <div>
-<div class="font-bold text-sm">Sarah Mitchell</div>
+<div class="font-bold text-sm">Bhavya Shah</div>
 <div class="text-xs text-slate-500">Expertise: UI/UX Design</div>
 </div>
 </div>
@@ -271,6 +271,7 @@
 </footer>
 
 </body></html>
+
 
 
 
