--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 <div class="size-6 bg-primary rounded flex items-center justify-center text-white">
 <span class="material-symbols-outlined text-sm">swap_calls</span>
 </div>
-<span class="font-bold text-lg">SkillMates</span>
+<span class="font-bold text-lg">SkillMate</span>
 </div>
 <div class="flex gap-8 text-sm text-slate-500">
 <a class="hover:text-primary transition-colors" href="#">Privacy Policy</a>
@@ -265,12 +265,13 @@
 <a class="hover:text-primary transition-colors" href="#">Contact Us</a>
 </div>
 <div class="text-sm text-slate-400">
-                © 2026 SkillMates< Inc. All rights reserved.
+                © 2026 SkillMate< Inc. All rights reserved.
             </div>
 </div>
 </footer>
 
 </body></html>
+
 
 
 
