--- a/dashboard.html
+++ b/dashboard.html
@@ -297,7 +297,7 @@
 </div>
 </div>
 </div>
-<button class="w-full mt-6 py-3 border border-secondary/30 text-xs font-bold rounded-xl hover:bg-secondary/10 transition-colors">View Full Calendar</button>
+<button class="w-full mt-6 py-3 border border-secondary/30 text-xs font-bold rounded-xl hover:bg-secondary/10 transition-colors" href= "calender.html">View Full Calendar</button>
 </div>
 <!-- Recommendations / Matches -->
 <div class="bg-accent-dark/50 border border-accent-light/10 rounded-xl p-6">
@@ -351,6 +351,7 @@
 </div>
 </body>
 </html>
+
 
 
 
