--- a/trending.html
+++ b/trending.html
@@ -122,7 +122,7 @@
 <input class="w-full bg-secondary/10 dark:bg-secondary/20 border-none rounded-xl pl-10 pr-4 py-2 focus:ring-2 focus:ring-accent-light/30 text-sm" placeholder="Search trending skills..." type="text"/>
 </div>
 </div>
-<div class="flex items-center gap-6">
+<! <div class="flex items-center gap-6">
 <div class="flex gap-2">
 <button class="p-2 rounded-xl bg-secondary/10 dark:bg-secondary/20 text-text-muted hover:text-white transition-colors">
 <span class="material-symbols-outlined">notifications</span>
@@ -130,10 +130,10 @@
 <button class="p-2 rounded-xl bg-secondary/10 dark:bg-secondary/20 text-text-muted hover:text-white transition-colors">
 <span class="material-symbols-outlined">mail</span>
 </button>
-</div>
-<div class="flex items-center gap-3 pl-4 border-l border-secondary/20">
-<div class="text-right hidden sm:block">
-<p class="text-sm font-semibold text-slate-900 dark:text-white">Rohan Sharma</p>
+</div> >
+<div class="flex items-center gap-3 pl-4 border-l border-secondary/20" href="profile2.html">
+<div class="text-right hidden sm:block" href = "profile2.html">
+<p class="text-sm font-semibold text-slate-900 dark:text-white" href = " profile2.html">Rohan Sharma</p>
 <p class="text-xs text-text-muted leading-none">Pro Learner</p>
 </div>
 <div class="size-10 rounded-full bg-center bg-cover border-2 border-accent-light/30" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAqROXZ86Nfcd8H0sb5johQAH-6dXtxNKzkYUfdKx8yPr5GkhGFLPfAGjSqVxerqZhG9bfCc8_EkumBLwceiu15QS5J9u8zPnOJOtpKAt6FYpAI4t8GpMrlfUoArmKW-P7DtJK1jA19aI94pzP2ld7Xwr00l-KG2QARO6WYdFSkJk7JFCW-NMeeum35O0DR3g2hVJuPrH0xtokHOsycaNVwfHSVS2DXMfN_yIbpzKudIeFN9SeS7EC9XsvLFw3Jp3HLartLOff-20M')"></div>
@@ -341,6 +341,7 @@
 </div>
 
 </body></html>
+
 
 
 
