--- a/profile2.html
+++ b/profile2.html
@@ -68,7 +68,7 @@
 </div>
 <nav class="flex items-center gap-8">
 <div class="hidden lg:flex items-center gap-8">
-<a class="text-sm font-semibold text-slate-400 hover:text-primary transition-colors" href="#">Network</a>
+<! <a class="text-sm font-semibold text-slate-400 hover:text-primary transition-colors" href="#">Network</a> >
 <a class="text-sm font-semibold text-slate-400 hover:text-primary transition-colors" href="#">Analytics</a>
 <a class="text-sm font-semibold text-slate-400 hover:text-primary transition-colors" href="#">Vault</a>
 </div>
@@ -290,11 +290,12 @@
 </main>
 <footer class="mt-20 py-12 border-t border-slate-border text-center">
 <p class="text-slate-500 text-sm font-medium tracking-wide italic">"Shared knowledge is accelerated evolution."</p>
-<p class="text-slate-600 text-xs mt-4">© 2024 SKILLMATE ENTERPRISE SOLUTIONS</p>
+<p class="text-slate-600 text-xs mt-4">© 2026 TECHNO SAPIENS </p>
 </footer>
 
 
 </body></html>
+
 
 
 
