--- a/dashboard.html
+++ b/dashboard.html
@@ -128,18 +128,18 @@
 </div>
 </div>
 <div class="flex items-center gap-6">
-<! <div class="flex gap-2">
+<div class="flex gap-2">
 <button class="p-2 rounded-xl bg-secondary/10 dark:bg-secondary/20 text-text-muted hover:text-white transition-colors">
 <span class="material-symbols-outlined">notifications</span>
 </button>
 <button class="p-2 rounded-xl bg-secondary/10 dark:bg-secondary/20 text-text-muted hover:text-white transition-colors">
 <span class="material-symbols-outlined">mail</span>
-</button>  >
+</button>
 </div>
 <div class="flex items-center gap-3 pl-4 border-l border-secondary/20">
 <div class="text-right hidden sm:block">
 <p class="text-sm font-semibold">Rohan Sharma </p>
-<p class="text-xs text-text-muted leading-none" href = "profile2.html" >Pro Learner</p>
+<p class="text-xs text-text-muted leading-none">Pro Learner</p>
 </div>
 <div class="size-10 rounded-full bg-center bg-cover border-2 border-accent-light/30" data-alt="Portrait of a professional learner" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAqROXZ86Nfcd8H0sb5johQAH-6dXtxNKzkYUfdKx8yPr5GkhGFLPfAGjSqVxerqZhG9bfCc8_EkumBLwceiu15QS5J9u8zPnOJOtpKAt6FYpAI4t8GpMrlfUoArmKW-P7DtJK1jA19aI94pzP2ld7Xwr00l-KG2QARO6WYdFSkJk7JFCW-NMeeum35O0DR3g2hVJuPrH0xtokHOsycaNVwfHSVS2DXMfN_yIbpzKudIeFN9SeS7EC9XsvLFw3Jp3HLartLOff-20M')"></div>
 </div>
@@ -297,7 +297,7 @@
 </div>
 </div>
 </div>
-<button class="w-full mt-6 py-3 border border-secondary/30 text-xs font-bold rounded-xl hover:bg-secondary/10 transition-colors" href= "calender.html">View Full Calendar</button>
+<button class="w-full mt-6 py-3 border border-secondary/30 text-xs font-bold rounded-xl hover:bg-secondary/10 transition-colors">View Full Calendar</button>
 </div>
 <!-- Recommendations / Matches -->
 <div class="bg-accent-dark/50 border border-accent-light/10 rounded-xl p-6">
@@ -351,7 +351,5 @@
 </div>
 </body>
 </html>
-
-
 
 
