--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a class="text-sm font-medium hover:text-primary transition-colors" href="#">How it works</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="#">Discover</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="#">Community</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Help</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="help1.html">Help</a>
 </nav>
 <div class="flex items-center gap-3">
 <a href="loginfinal.html">
@@ -271,6 +271,7 @@
 </footer>
 
 </body></html>
+
 
 
 
