--- a/help1.html
+++ b/help1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Skill Swap – Help Center</title>
+<title>SkillMate – Help Center</title>
 
 <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
 
@@ -44,7 +44,7 @@ body { font-family: Manrope, sans-serif; }
   <div class="max-w-[1200px] mx-auto px-6 py-4 flex justify-between items-center">
     <div class="flex items-center gap-3">
       <span class="material-symbols-outlined text-primary text-3xl">swap_calls</span>
-      <span class="font-bold text-lg">SkillSwap.PRO</span>
+      <span class="font-bold text-lg">SkillMate </span>
     </div>
 
     <nav class="hidden md:flex gap-8 text-sm text-textMuted">
@@ -61,7 +61,7 @@ body { font-family: Manrope, sans-serif; }
 <section class="py-20 text-center">
   <h1 class="text-5xl font-black mb-4">Help Center</h1>
   <p class="text-textMuted max-w-xl mx-auto mb-10">
-    Find answers, explore guides, and learn how to get the most out of SkillSwap.
+    Find answers, explore guides, and learn how to get the most out of SkillMate.
   </p>
 
   <div class="max-w-xl mx-auto flex bg-bgCard border border-borderDark rounded-xl overflow-hidden">
@@ -141,8 +141,9 @@ body { font-family: Manrope, sans-serif; }
 
 <!-- FOOTER -->
 <footer class="border-t border-borderDark py-10 text-center text-textMuted text-sm">
-  © 2026 SkillSwap.PRO — All rights reserved
+  © 2026 SkillMate — All rights reserved
 </footer>
 
 </body>
 </html>
+
