--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <h2 class="text-xl font-bold tracking-tight">SkillMate</h2>
 </div>
 <nav class="hidden md:flex items-center gap-8">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">How it works</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Discover</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Community</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="help1.html">Help</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#"></a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#"></a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#"></a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="help1.html"></a>
 </nav>
 <div class="flex items-center gap-3">
 <a href="loginfinal.html">
@@ -271,6 +271,7 @@
 </footer>
 
 </body></html>
+
 
 
 
