--- a/community.html
+++ b/community.html
@@ -131,11 +131,13 @@
 <span class="material-symbols-outlined">military_tech</span>
 </button>
 </div>
+        <a href="profile2.html>
 <div class="flex items-center gap-3 pl-4 border-l border-secondary/20">
 <div class="text-right hidden sm:block">
-<p class="text-sm font-semibold" href = "profile2.html">Rohan Sharma</p>
+<p class="text-sm font-semibold" >Rohan Sharma</p>
 <p class="text-xs text-text-muted leading-none">Pro Learner</p>
 </div>
+        </a>
 <div class="size-10 rounded-full bg-center bg-cover border-2 border-accent-light/30" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAqROXZ86Nfcd8H0sb5johQAH-6dXtxNKzkYUfdKx8yPr5GkhGFLPfAGjSqVxerqZhG9bfCc8_EkumBLwceiu15QS5J9u8zPnOJOtpKAt6FYpAI4t8GpMrlfUoArmKW-P7DtJK1jA19aI94pzP2ld7Xwr00l-KG2QARO6WYdFSkJk7JFCW-NMeeum35O0DR3g2hVJuPrH0xtokHOsycaNVwfHSVS2DXMfN_yIbpzKudIeFN9SeS7EC9XsvLFw3Jp3HLartLOff-20M')" href = "profile2.html"></div>
 </div>
 </div>
@@ -145,11 +147,6 @@
 <div>
 <h2 class="text-3xl font-black tracking-tight text-slate-900 dark:text-white">Community Spotlight</h2>
 <p class="text-text-muted mt-1">Celebrating our top achievers and dedicated mentors this week.</p>
-</div>
-<div class="flex gap-2">
-<button class="px-4 py-2 bg-secondary/20 text-sm font-medium rounded-lg hover:bg-secondary/30 transition-colors">Past Spotlights</button>
-<! <button class="px-4 py-2 bg-accent-light text-primary text-sm font-bold rounded-lg hover:brightness-110 transition-all">Nominate Someone</button> >
-</div>
 </div>
 <section class="mb-12">
 <div class="bg-accent-light rounded-3xl p-8 md:p-12 flex flex-col md:flex-row items-center gap-12 relative overflow-hidden">
@@ -180,10 +177,12 @@
 <span class="text-sm font-bold text-primary">Curriculum Lead</span>
 </div>
 </div>
+        <a href="profile2.html">
 <button class="px-8 py-4 bg-primary text-white font-bold rounded-xl hover:bg-primary/90 transition-all flex items-center gap-3" href = " profile2.html">
                                 View Full Profile
                                 <span class="material-symbols-outlined" href = "profile2.html">arrow_forward</span>
 </button>
+        </a>
 </div>
 </div>
 </section>
@@ -213,7 +212,7 @@
 <div class="size-8 rounded-full border-2 border-primary bg-cover" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCEPlXnUXrnZNbGnX5oMtc6Ehm912f3Yc8GiNI2ga9zHwMHpjKcW7MwXpnd3wzaysABJ-qhhn3ifQXO2ed2DrVlGJ6_I5my5zKo1d7ryI9ffC3_n0nL-4XNQmoGeJmc30xTVldecDCI7xYyEYgl8qCoj-FIaaTgLwr-NWacm450-dyrgycswCua4AD9nvBRomuV4OGPF9YM-xUxZuapdtNl52sHRpG1bR0VxrVDorJqxbzT_HCnIexy85zgo_5zNQtaUKW1rTYkTRk')"></div>
 <div class="size-8 rounded-full border-2 border-primary bg-slate-800 flex items-center justify-center text-[10px] font-bold text-text-muted">+84</div>
 </div>
-<button class="text-accent-light text-sm font-bold hover:underline">Read Contributions</button>
+
 </div>
 </div>
 <div class="bg-white dark:bg-primary/40 border border-secondary/20 rounded-2xl p-6 relative overflow-hidden group">
@@ -240,9 +239,10 @@
 <span class="material-symbols-outlined text-yellow-500 text-sm">star</span>
 <span class="text-sm font-bold">5.0</span>
 <span class="text-xs text-text-muted">(124 Reviews)</span>
-<! </div>
+<!-- </div>
 <button class="px-4 py-2 bg-accent-dark text-accent-light text-xs font-bold rounded-lg hover:bg-accent-dark/80 transition-colors">Book a Session</button>
-</div> >
+--!>
+</div> 
 </div>
 </div>
 <div class="mt-12">
@@ -283,6 +283,7 @@
 </div>
 
 </body></html>
+
 
 
 
