Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <div
             class="size-10 bg-primary rounded-lg flex items-center justify-center text-white"
           >
-            <span class="material-symbols-outlined text-2xl">swap_calls</span>
+            <img src="logo-removebg-preview.png" height="1000px" width="1000px">
+            <!-- <span class="material-symbols-outlined text-2xl">swap_calls</span> -->
           </div>
           <h2 class="text-xl font-bold tracking-tight">SkillMate</h2>
         </div>
@@ -447,7 +448,8 @@
           <div
             class="size-6 bg-primary rounded flex items-center justify-center text-white"
           >
-            <span class="material-symbols-outlined text-sm">swap_calls</span>
+            <!-- <span class="material-symbols-outlined text-sm">swap_calls</span> -->
+            <img src="logo-removebg-preview.png" height="1000px" width="1000px">
           </div>
           <span class="font-bold text-lg">SkillMate</span>
         </div>
@@ -469,4 +471,5 @@
     </footer>
   </body>
 </html>
+
 
