--- a/dashboard.html
+++ b/dashboard.html
@@ -91,22 +91,21 @@
       <aside
         class="w-64 flex-shrink-0 bg-primary border-r border-secondary/30 hidden md:flex flex-col"
       >
-        <div class="p-6 flex items-center gap-3">
-          <div class="size-8 text-accent-light">
-            <svg
-              fill="none"
-              viewbox="0 0 48 48"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                clip-rule="evenodd"
-                d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z"
-                fill="currentColor"
-                fill-rule="evenodd"
-              ></path>
-            </svg>
+         <div class="p-6 flex items-center gap-4">
+          <div class="h-14 w-14 flex items-center justify-center">
+            <img
+              src="logo-removebg-preview.png"
+              alt="SkillMate Logo"
+              class="max-h-full max-w-full object-contain filter drop-shadow-sm brightness-110"
+            />
           </div>
-          <h1 class="text-xl font-bold tracking-tight text-white">SkillMate</h1>
+          <div class="flex flex-col">
+            <h1
+              class="text-2xl font-black tracking-tight text-white leading-none"
+            >
+              SkillMate
+            </h1>
+          </div>
         </div>
         <nav class="flex-1 px-4 space-y-2 mt-4">
           <a
@@ -671,3 +670,4 @@
     </script>
   </body>
 </html>
+
