Fix HTML structure and update calendar layout

--- a/calender.html
+++ b/calender.html
@@ -59,11 +59,21 @@
 
 <div class="flex h-screen overflow-hidden">
     <aside class="w-64 flex-shrink-0 bg-[#011026] border-r border-white/5 hidden md:flex flex-col">
-        <div class="p-8 flex items-center gap-3">
-            <div class="size-8 text-white">
-                <svg fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z" fill="currentColor" fill-rule="evenodd"></path></svg>
-            </div>
-            <h1 class="text-2xl font-bold tracking-tight">SkillMate</h1>
+          <div class="p-6 flex items-center gap-4">
+          <div class="h-14 w-14 flex items-center justify-center">
+            <img
+              src="logo-removebg-preview.png"
+              alt="SkillMate Logo"
+              class="max-h-full max-w-full object-contain filter drop-shadow-sm brightness-110"
+            />
+          </div>
+          <div class="flex flex-col">
+            <h1
+              class="text-2xl font-black tracking-tight text-white leading-none"
+            >
+              SkillMate
+            </h1>
+          </div>
         </div>
         <nav class="flex-1 px-4 space-y-1">
             <a class="flex items-center gap-4 px-4 py-3 text-text-muted hover:text-white transition-all" href="#"><span class="material-symbols-outlined">grid_view</span> Dashboard</a>
@@ -242,4 +252,5 @@
     window.onload = render;
 </script>
 </body>
+
 </html>
