--- a/loginfinal.html
+++ b/loginfinal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | Skill Swap</title>
+    <title>Login | SkillMate</title>
 
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
 
@@ -56,8 +56,18 @@
         <div class="relative z-10 flex flex-col justify-end p-12">
           <div class="mb-8">
             <div class="flex items-center gap-2 mb-4">
-              <span class="material-symbols-outlined text-4xl">swap_calls</span>
-              <span class="text-2xl font-bold">Skill Swap</span>
+              <!-- <span class="material-symbols-outlined text-4xl">swap_calls</span> -->
+            <div class="p-6 flex items-center gap-0">
+          <div class="h-14 w-14 flex items-center justify-center">
+            <img
+              src="logo-removebg-preview.png"
+              alt="SkillMate Logo"
+              class="max-h-full max-w-full object-contain filter drop-shadow-sm brightness-110"
+            />
+          </div>
+          
+        </div>   
+              <span class="text-3xl font-bold">SkillMate</span>
             </div>
 
             <h1 class="text-5xl font-bold leading-tight mb-4">
@@ -70,7 +80,7 @@
             </p>
           </div>
 
-          <p class="text-sm text-textMuted">Join 5,000+ learners worldwide</p>
+          <!-- <p class="text-sm text-textMuted">Join 5,000+ learners worldwide</p> -->
         </div>
       </div>
 
@@ -238,5 +248,6 @@
 
   </body>
 </html>
+
 
 
